# portfolio_management

./: .coverage  .coveragerc  .gitignore  .gitlint  .importlinter  .mypy.ini  .pre-commit-config.yaml  1000_ASSET_BACKTEST_RESULTS.md  ARCHITECTURE_AUDIT_SUMMARY.md  ARCHITECTURE_DIAGRAM.md  BENCHMARK_QUICK_START.md  CACHE_BENCHMARK_IMPLEMENTATION.md  CACHING_EDGE_CASES_SUMMARY.md  CARDINALITY_IMPLEMENTATION_SUMMARY.md  CLEANUP_SUMMARY.md  CLEANUP_SUMMARY_2025-10-23.md  CODE_REVIEW.md  DOCUMENTATION_CLEANUP.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_ORGANIZATION_PLAN.md  DOCUMENTATION_PLAN.md  DOCUMENTATION_UPDATE_SUMMARY.md  EDGE_CASE_TESTS_SUMMARY.md  ENHANCED_ERROR_HANDLING_SUMMARY.md  FAST_IO_BENCHMARKS_SUMMARY.md  FAST_IO_IMPLEMENTATION.md  FIX_SUMMARY.md  GEMINI.md  GITHUB_ACTIONS_FIX.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_PIT_EDGE_CASES.md  INCREMENTAL_RESUME_SUMMARY.md  INTEGRATION_COMPLETE.md  LONG_HISTORY_BACKTEST_2005_2025.md  LONG_HISTORY_TESTS_IMPLEMENTATION_SUMMARY.md  MEMBERSHIP_EDGE_CASE_IMPLEMENTATION.md  MEMORY_BANK_AUDIT_INDEX.md  MEMORY_BANK_SYNC_COMPLETE.md  MEMORY_BANK_SYNC_QUICK_REFERENCE.md  MEMORY_BANK_UPDATE_PRIORITY.md  (+56 more)
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: architecture.yml  tests.yml  type-check.yml
archive/: REFACTORING_SESSION_1.md  REFACTORING_SESSION_2.md  REFACTORING_SESSION_3.md
archive/cleanup/: CLEANUP_PLAN_SUMMARY.md  CLEANUP_QUICKREF.md  DOCUMENTATION_CLEANUP_REPORT.md  DOCUMENTATION_CLEANUP_SUMMARY.md
archive/diagnostics/: AUDIT_RESULTS_EXECUTIVE_SUMMARY.md  COMMIT_PUSH_SUMMARY.md  DEPENDENCY_FIX_CHECKLIST.md  ENVIRONMENT_SETUP_COMPLETE.md  FIX_SUMMARY.md  MEMORY_BANK_AUDIT_2025-10-22.md  MEMORY_BANK_AUDIT_SUMMARY.md  SESSION_COMPLETE_MEMORY_BANK_SYNC.md  STATISTICS_CACHING_SUMMARY.md  TOOLING_UPDATE_COMPLETE.md
archive/documentation/: BENCHMARK_QUICK_START.md  CLEANUP_AND_WORKFLOW_SUMMARY.md  CODEBASE_CLEANUP_ANALYSIS.md  EDGE_CASE_TESTS_SUMMARY.md  ENHANCED_ERROR_HANDLING_SUMMARY.md  FAST_IO_BENCHMARKS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_PIT_EDGE_CASES.md  MEMBERSHIP_EDGE_CASE_IMPLEMENTATION.md  PRESELECTION_ROBUSTNESS_SUMMARY.md  SP500_EXAMPLE_SUMMARY.md  SPRINT_2_AGENT_ASSIGNMENTS.md  VISUALIZATION_RESULTS_SUMMARY.md
archive/meta/: GEMINI.md
archive/old_benchmarks/: benchmark_backtest_optimization.py  corrected_backtest.py
archive/phase3/: CODE_REVIEW_PHASE3.md  PHASE3_COMPLETION_PLAN.md  PHASE3_IMPLEMENTATION_TASKS.md  PHASE3_PORTFOLIO_SELECTION_PLAN.md  PHASE3_QUICK_START.md  PHASE3_QUICK_START_COMPLETION.md  SESSION_PHASE3_PLANNING.md
archive/reports/: CORRECTED_METRICS_REPORT.md
archive/sessions/: CLEANUP_COMPREHENSIVE_SUMMARY.md  CLEANUP_SUMMARY.md  DOCUMENTATION_CLEANUP.md  REFACTORING_SESSION_1.md  REFACTORING_SESSION_2.md  REFACTORING_SESSION_3.md  REFACTORING_SUMMARY.md  SESSION_COMPLETION_SUMMARY.md  SESSION_TECHNICAL_DEBT_REVIEW_2025-10-15.md
archive/technical-debt/: CLEANUP_PLAN_COMPREHENSIVE.md  CLEANUP_VALIDATION_REPORT.md  TASK1_COMPLETION.md  TASK2_ANALYSIS.md  TASK2_COMPLETION.md  TASK3_COMPLETION.md  TASK4_COMPLETION.md  TECHNICAL_DEBT_PLAN.md  TECHNICAL_DEBT_RESOLUTION_SUMMARY.md
benchmarks/: README.md  __init__.py  benchmark_cache_performance.py  benchmark_cache_performance_stub.py  benchmark_fast_io.py  benchmark_preselection.py  check_syntax.py  validate_benchmark.py
config/: lowvol_strategy_config.yaml  momentum_strategy_config.yaml  multifactor_strategy_config.yaml  regime_examples.yaml  universes.yaml  universes_long_history.yaml
config/examples/: basic_equal_weight.yaml  batch_backtest.yaml  complex_membership_policy.yaml  fast_io_big_datasets.yaml  large_universe_optimized.yaml  lowvol_preselection.yaml  minimal_membership_policy.yaml  momentum_preselection.yaml  multifactor_combined.yaml  multiple_buffer_zones.yaml  optimized_lookback.yaml  performance_tuned.yaml  pit_eligibility_custom.yaml  strategy_long_only_momentum.yaml  strategy_low_vol_defensive.yaml  strategy_quality_momentum.yaml  strategy_sector_neutral_preselection.yaml
docs/: CARDINALITY_DESIGN_NOTES.md  CLI_REFERENCE.md  FEATURE_MATRIX.md  advanced_features_guide.md  asset_classification.md  asset_selection.md  backtest_integration_guide.md  backtest_optimization.md  backtesting.md  best_practices.md  caching_reliability.md  calculate_returns.md  cardinality_constraints.md  cardinality_quickstart.md  clustering_diversification.md  configuration_best_practices.md  configuration_validation.md  data_loading_optimization.md  data_preparation.md  error_reference.md  fast_io.md  incremental_resume.md  long_history_tests_guide.md  long_history_tests_troubleshooting.md  macro_signals.md  manage_universes.md  membership_policy.md  membership_policy_guide.md  pit_eligibility_edge_cases.md  portfolio_construction.md  preselection.md  preselection_edge_cases.md  preselection_tuning_guide.md  returns.md  statistics_caching.md  streaming_performance.md  synthetic_workflow_plan.md  technical_indicators.md  troubleshooting.md  troubleshooting_guide.md  (+4 more)
examples/: README.md  batch_backtest.py  cache_management.py  lowvol_strategy.py  momentum_strategy.py  multifactor_strategy.py  quick_visualization.py  real_data_visualization.py  sp500_blue_chips_advanced.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: __init__.py  archive_sprint2_docs.sh  benchmark_caching.py  calculate_returns.py  classify_assets.py  construct_portfolio.py  demo_caching_performance.py  manage_universes.py  plot_charts.py  prepare_tradeable_data.py  run_backtest.py  select_assets.py  validate_test_isolation.sh
tests/: __init__.py  conftest.py  synthetic_data.py  test_backtest.py  test_classification.py  test_portfolio.py  test_returns.py  test_selection.py  test_universes.py  test_utils.py  test_visualization.py  validate_fast_io.py
tradeable_instruments/: bossa_instruments_2025-08-26_structured.csv  mbank_etf_structured_2023-10-24_harmonized.csv  mbank_stocks_structured_2025-05-21_harmonized.csv
(+859 files in other folders)
